<resources>
    <string name="app_name">Paymax</string>
    <string name="whchat_txt">微信支付</string>
    <string name="alipay_txt">支付宝支付</string>
    <string name="lkl_txt">拉卡拉支付</string>
    <string name="payment_txt">金额（元）</string>
    <string name="userid_txt">用户号</string>
    <string name="default_amount">￥ 0.01</string>
    <string name="default_userid">100</string>
    <string name="bt_ok">确认支付</string>
    <string name="time_expire_txt">过期时间</string>
    <string name="default_time_expire">3600</string>


    <string name="text_name">姓名</string>
    <string name="text_idcard">身份证号码</string>
    <string name="btn_start_liveness">开始活体检测</string>

    <string name="login_only_can_input">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890</string>
</resources>
